fix robot hat shifting. add feedback when robot is saved

--- a/basic-bp/css/edit-robot.css
+++ b/basic-bp/css/edit-robot.css
@@ -1,6 +1,17 @@
+.bodypart {
+	width:30%;
+    padding-right:10px;
+}
+
+.windowpart {
+	width:100px;
+}
+
+
 #title{
 	padding-right: 200px
 }
+
 #tabs{
 	width: 100px;
 	margin-left: 20px;
@@ -47,43 +58,40 @@ h3,#robotName {
 #saveRobot {
 	width:90px;
 	padding:5px;
-	margin-left:30%;
+	margin-left:35%;
 	margin-bottom:40px;
 }
 
-#myRobot #target-1 {
+#target-1 {
 	display:block;
 	margin: 0 auto;
 	z-index:7;
 }
-#myRobot #target-2 {
+#target-2 {
 	display:inline-block;
 }
 
-#myRobot #target-3 {
+#target-3 {
 	display:inline-block;
 	position:relative;
 	left:-100px;
 	z-index:5;
 }
 
-#myRobot #target-4 {
+#target-4 {
 	display:inline-block;
 	position:relative;
 	left:100px;
 }
 
-#myRobot #target-6 {
-	position:absolute;
-	top:180px;
-	right:360px;
-}
+#target-6 {
+	display:block;
+	position:relative;
+	top:-480px;
+	left:140px;
+	}
 
-.bodypart {
-	width:30%;
-    padding-right:10px;
-}
-
-.windowpart {
-	width:100px;
+#message {
+	display:none;
+	float:left;
 }
